Fix exception throw bug